syntax = "proto3";

package todo.v1;

option go_package = "example.com/todo-grpc/api;api";

message Todo {
  int64 id = 1;
  string title = 2;
  bool done = 3;
}

message CreateRequest { string title = 1; }
message CreateResponse { Todo item = 1; }

message GetRequest { int64 id = 1; }
message GetResponse { Todo item = 1; }

message ListRequest {}
message ListResponse { repeated Todo items = 1; }

service TodoService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc List(ListRequest) returns (stream Todo);
}
